--- a/popup.html
+++ b/popup.html
@@ -47,10 +47,24 @@
       color: #a94442;
       border: 1px solid #ebccd1;
     }
+    
+    #callout {
+      background-color: #fff3cd;
+      color: #856404;
+      padding: 10px;
+      border-radius: 4px;
+      margin: 10px 0;
+      font-size: 12px;
+      text-align: center;
+      border: 1px solid #ffeaa7;
+    }
   </style>
 </head>
 <body>
   <h3>tl;dv Transcript Summarizer</h3>
+  <div id="callout">
+    ⚠️ Make sure transcripts are visible on the page before using these buttons
+  </div>
   <button id="copyTranscript">Copy Transcript</button>
   <button id="summarizeWithClaude">Summarize with Claude</button>
   <button id="settings">Settings</button>
